--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,4 +21,13 @@ flutter:
   uses-material-design: true
 
   assets:
-   - images/
+    - images/adit.jpg
+
+  fonts:
+    - family: Pacifico
+      fonts:
+      - asset: fonts/Pacifico-Regular.ttf
+
+    - family: Source Sans Pro
+      fonts:
+      - asset: fonts/SourceSansPro-Regular.ttf
