--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  animated_text_kit: ^2.2.0
-
   cupertino_icons: ^0.1.2
+  animated_text_kit: ^2.2.0
+  firebase_core: ^0.4.5
+  firebase_auth: ^0.16.1
+  cloud_firestore: ^0.13.7
 
 dev_dependencies:
   flutter_test:
@@ -21,4 +23,4 @@ flutter:
   uses-material-design: true
 
   assets:
-  - images/
+    - images/
